# jarv-agentic-ai

./: .env.example  .env.production.example  .gitignore  AUDIT_AGAINST_DESIGN.md  BUILD_LEDGER.md  CLAUDE.md  Claude_md.txt  DOCKER.md  Design_md.txt  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_RUNBOOK.md  Makefile  PHASE21_AUDIT_REPORT.md  PHASE21_COMPLETE_VERIFICATION.md  PHASE22_COMPLETE_VERIFICATION.md  PHASE23_COMPLETE_VERIFICATION.md  PHASE24_COMPLETE_VERIFICATION.md  PHASE25_FINAL_ACCEPTANCE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  update_ledger_phase16.py  update_ledger_phase17.py
apps/backend/: .env.example  .gitignore  Dockerfile  PHASE16_NO_PLACEHOLDER_VERIFICATION.md  PHASE17_COMPLETE_VERIFICATION.md  PHASE18_COMPLETE_VERIFICATION.md  PHASE19_COMPLETE_VERIFICATION.md  PHASE20_COMPLETE_VERIFICATION.md  PHASE_14_SUMMARY.md  PHASE_15_VERIFICATION.md  README.md  agent_verification_report.txt  alembic.ini  pyproject.toml  pytest.ini  run_tests.py  test_asset_system.py  test_business_ops.py  test_coding_loop.py  test_infrastructure_tools.py  test_phase17_complete.py  test_phase18_complete.py  test_phase19_infrastructure_tools.py  test_phase20_self_healing.py  test_phase21_voice.py  test_support_system.py  verify_asset_endpoints.py  verify_phase17_real_implementation.py  verify_support_phase16.py
apps/backend/alembic/: env.py
apps/backend/app/: __init__.py  main.py
apps/backend/scripts/: README.md  __init__.py  db.py  fix_migration_order.py  generate_migration.py  scheduler.sh  seed_data.py  setup_admin.py  test_worker.py  worker.sh
apps/backend/tests/: __init__.py  conftest.py  test_agents_core.py  test_api_agents.py  test_api_health.py  test_api_tasks.py  test_api_workspaces.py  test_auth.py  test_docker.py  test_health.py  test_orchestrator_delegation.py  test_production_readiness.py  test_regression.py  test_repair10_tool_permissions_pause_resume.py  test_repair7_boundary_approval_resume.py  test_repair8_richard_workflow.py  test_repair9_relational_contract.py  test_research_qa_agents.py  test_security_api.py  test_smoke.py  test_task_status.py  (+5 more)
services/local-runner/: .gitignore  Dockerfile  README.md  install.py  pyproject.toml  start.py
services/workers/: .gitignore  Dockerfile  README.md  pyproject.toml
(+357 files in other folders)
