[tool.poetry]
name = "jarv-workers"
version = "1.0.0"
description = "JARV Agentic AI System - Background Workers"
authors = ["Richard Curley"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
